--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,25 @@
         }
     ],
     "require": {
+        "php": ">=7.4",
         "ext-json" : "*",
-        "ext-curl" : "*"
+        "ext-curl" : "*",
+        "guzzlehttp/guzzle": "~6.0",
+        "alibabacloud/client": "^1.5.32",
+        "qiniu/php-sdk": "^7.2",
+        "qcloudsms/qcloudsms_php": "0.1.*",
+        "ucloud/ucloud-sdk-php": "^0.3.3",
+        "alibabacloud/dysmsapi-20170525": "2.0.24"
     },
     "autoload": {
         "files": [],
         "psr-4": {
             "Sxqibo\\Sms\\": "src/"
+        }
+    },
+    "extra": {
+        "config": {
+            "sms": "config/config.php"
         }
     }
 }
